--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,63 @@
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "gradle.plugin.com.github.spotbugs:gradlePlugin:1.6.0"
+  }
+}
+
+apply plugin: "com.github.spotbugs"
+// apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
 apply plugin: 'java-library'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+  // Use jcenter for resolving your dependencies.
+  // You can declare any Maven/Ivy/file repository here.
+  jcenter()
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    // api 'org.apache.commons:commons-math3:3.6.1'
+  // This dependency is exported to consumers, that is to say found on their compile classpath.
+  // api 'org.apache.commons:commons-math3:3.6.1'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    // implementation 'com.google.guava:guava:23.0'
+  // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+  // implementation 'com.google.guava:guava:23.0'
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+  // Use JUnit test framework
+  testImplementation 'junit:junit:4.12'
 }
 
 jacocoTestReport {
-    reports {
-        xml.enabled true
-        csv.enabled false
-        html.enabled false
-    }
+  reports {
+    xml.enabled true
+    csv.enabled false
+    html.enabled true
+  }
 }
 
 // Enforce code coverage metrics
 jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            element = 'CLASS'
-            excludes = ['in.rishikeshdarandale.aws.AwsSignParams']
-            limit {
-                counter = 'LINE'
-                minimum = 0.8
-            }
-        }
-        rule {
-            element = 'CLASS'
-            excludes = ['in.rishikeshdarandale.aws.AwsSignParams']
-            limit {
-                counter = 'BRANCH'
-                minimum = 0.8
-            }
-        }
+  violationRules {
+    rule {
+      element = 'CLASS'
+      limit {
+        counter = 'LINE'
+        minimum = 0.8
+      }
     }
+    rule {
+      element = 'CLASS'
+      limit {
+        counter = 'BRANCH'
+        minimum = 0.8
+      }
+    }
+  }
 }
 
 check.dependsOn jacocoTestCoverageVerification
