--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   // This dependency is used internally, and not exposed to consumers on their own compile classpath.
   // implementation 'com.google.guava:guava:23.0'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.4'
 
   // Use JUnit test framework
   testImplementation 'junit:junit:4.12'
