--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,11 @@ dependencies {
   // implementation 'com.google.guava:guava:23.0'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
   implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.4'
+  implementation 'org.glassfish.jersey.core:jersey-client:2.26'
 
   // Use JUnit test framework
   testImplementation 'junit:junit:4.12'
+  testImplementation 'org.mockito:mockito-core:2.13.0'
 }
 
 jacocoTestReport {
@@ -47,6 +49,7 @@ jacocoTestCoverageVerification {
   violationRules {
     rule {
       element = 'CLASS'
+      excludes = ['in.rishikeshdarandale.aws.http.AbstractRequest']
       limit {
         counter = 'LINE'
         minimum = 0.8
@@ -54,6 +57,7 @@ jacocoTestCoverageVerification {
     }
     rule {
       element = 'CLASS'
+      excludes = ['in.rishikeshdarandale.aws.http.AbstractRequest']
       limit {
         counter = 'BRANCH'
         minimum = 0.8
