--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ jacocoTestCoverageVerification {
   violationRules {
     rule {
       element = 'CLASS'
-      excludes = ['in.rishikeshdarandale.aws.http.AbstractRequest']
+      excludes = ['io.github.rishikeshdarandale.aws.http.AbstractRequest']
       limit {
         counter = 'LINE'
         minimum = 0.8
@@ -57,7 +57,7 @@ jacocoTestCoverageVerification {
     }
     rule {
       element = 'CLASS'
-      excludes = ['in.rishikeshdarandale.aws.http.AbstractRequest']
+      excludes = ['io.github.rishikeshdarandale.aws.http.AbstractRequest']
       limit {
         counter = 'BRANCH'
         minimum = 0.8
