--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,20 @@
 buildscript {
   repositories {
     maven {
-      url "https://plugins.gradle.org/m2/"
+      url 'https://plugins.gradle.org/m2/'
     }
   }
   dependencies {
-    classpath "gradle.plugin.com.github.spotbugs:gradlePlugin:1.6.0"
+    classpath 'gradle.plugin.com.github.spotbugs:gradlePlugin:1.6.0'
+    classpath 'net.researchgate:gradle-release:2.6.0'
   }
 }
 
-apply plugin: "com.github.spotbugs"
+apply plugin: 'com.github.spotbugs'
 // apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
 apply plugin: 'java-library'
+apply plugin: 'net.researchgate.release'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -20,6 +22,9 @@ repositories {
   // You can declare any Maven/Ivy/file repository here.
   jcenter()
 }
+
+group='io.github.rishikeshdarandale'
+version='1.0.0-SNAPSHOT'
 
 dependencies {
   // This dependency is exported to consumers, that is to say found on their compile classpath.
@@ -33,7 +38,7 @@ dependencies {
 
   // Use JUnit test framework
   testImplementation 'junit:junit:4.12'
-  testImplementation 'org.mockito:mockito-core:2.13.0'
+  testImplementation 'org.mockito:mockito-core:2.15.0'
 }
 
 jacocoTestReport {
@@ -67,3 +72,7 @@ jacocoTestCoverageVerification {
 }
 
 check.dependsOn jacocoTestCoverageVerification
+
+release {
+  versionPropertyFile = 'build.gradle'
+}
