Added the task to wrap the version with qoute
https://stackoverflow.com/q/42227183/8101556

--- a/build.gradle
+++ b/build.gradle
@@ -76,3 +76,8 @@ check.dependsOn jacocoTestCoverageVerification
 release {
   versionPropertyFile = 'build.gradle'
 }
+
+updateVersion.doLast {
+    def buildGradle = file('build.gradle')
+    buildGradle.text = buildGradle.text.replaceFirst(~/version = (\d++\.\d++\.\d++)/, 'version = \'$1\'')
+}
