Updated the correct username variable

--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ uploadArchives {
       }
 
       snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-        authentication(userName: ossrhUsername, password: ossrhPassword)
+        authentication(userName: v_ossrhUsername, password: v_ossrhUsername)
       }
 
       pom.project {
