--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
-before_install:
-  - ./before-build.sh
 install:
-  - "./gradlew uploadArchives -PossrhUsername='${SONATYPE_USERNAME}' -PossrhPassword=${SONATYPE_PASSWORD} -Psigning.keyId='${GPG_KEY_ID}' -Psigning.password='${GPG_KEY_PASSPHRASE}' -Psigning.secretKeyRingFile=my.travis.gpg"
+  - ./build.sh
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 env:
