--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+install:
+  - ./gradlew assemble -x signArchives
 script:
   - ./gradlew check jacocoTestReport
 after_success:
